--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ monitor_speed = 115200
 monitor_filters = default, time, log2file
 monitor_rts = 0
 monitor_dtr = 0
+lib_deps = mathertel/RotaryEncoder@^1.5.3
