--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,9 @@
 platform = espressif32@4.2.0
 board = esp32doit-devkit-v1
 framework = arduino
-monitor_speed = 115200
-monitor_filters = default, time, log2file
+monitor_speed = 921600
+monitor_filters = default, log2file
 monitor_rts = 0
 monitor_dtr = 0
 lib_deps = mathertel/RotaryEncoder@^1.5.3
+build_flags = -O3
